# transform_refactoring

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_str.txt
docs/: links.md
lib/: CMakeLists.txt
lib/circle/: CMakeLists.txt  circle.cpp  circle.h
lib/cylinder/: CMakeLists.txt  cylinder.cpp  cylinder.h
lib/line/: CMakeLists.txt  line.cpp  line.h
lib/parallelepiped/: CMakeLists.txt  parallelepiped.cpp  parallelepiped.h
lib/point/: point.cpp  point.h
lib/rectangle/: rectangle.cpp  rectangle.h
lib/shape/: CMakeLists.txt  shape.cpp  shape.h
lib/transform/: CMakeLists.txt  transform.cpp  transform.h
tests/: CMakeLists.txt  README.md  main.cpp  run.sh
